Fix css file so that the images are aligning in the center and add pseudocode to game.js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,12 +36,15 @@ body{
       }
   }
 
+  
 .crystal-image{
-    width: 250px;
-    height: 250px;
+    width: 25%;
+    height: auto;
 }
 
+
 .containercolor {
-    background-color:#fff;
+    background-color:rgb(119, 121, 201);
     opacity: 0.95;
   }
+
